--- a/public/index.html
+++ b/public/index.html
@@ -8,36 +8,19 @@
   </head>
   <body>
     <header>
-      <h1>bgu -- URL-Shortener -- Inspired by Code Garden</h1>
+      <h1>bgu -- URL-Shortener -- Inspired by Coding Garden</h1>
     </header>
-    <main id="app">
-      <form @submit.prevent="createUrl()">
-        <div v-if="error" class="error">
-          {{error}}
-        </div>
-        <input
-          placeholder="Enter a URL"
-          v-model="url"
-          type="text"
-          name="url"
-          id="url"
-        />
-        <input
-          placeholder="Enter a Slug [Optional]"
-          v-model="slug"
-          type="text"
-          name="slug"
-          id="slug"
-        />
-        <button type="submit">Create</button>
-      </form>
-      <div v-if="created">
-        <p class="created">
-          Your short URL is: <a :href="created">{{created}}</a>
-        </p>
-      </div>
-    </main>
-    <script src="https://unpkg.com/vue@2.6.11/dist/vue.js"></script>
-    <script src="app.js"></script>
+    <main id="app"></main>
+    <!-- <script src="https://unpkg.com/vue@2.6.11/dist/vue.js"></script> -->
+    <script
+      src="https://unpkg.com/react@16/umd/react.production.js"
+      crossorigin
+    ></script>
+    <script
+      src="https://unpkg.com/react-dom@16/umd/react-dom.production.js"
+      crossorigin
+    ></script>
+    <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
+    <script type="text/babel" src="app.js"></script>
   </body>
 </html>
