Fixed Design, UI/UX

--- a/public/index.html
+++ b/public/index.html
@@ -8,16 +8,16 @@
   </head>
   <body>
     <header>
-      <h1>bgu -- URL-Shortener -- Inspired by Coding Garden</h1>
+      <h1>bgu -- URL-Shortener</h1>
     </header>
     <main id="app"></main>
     <!-- <script src="https://unpkg.com/vue@2.6.11/dist/vue.js"></script> -->
     <script
-      src="https://unpkg.com/react@16/umd/react.production.js"
+      src="https://unpkg.com/react@16/umd/react.development.js"
       crossorigin
     ></script>
     <script
-      src="https://unpkg.com/react-dom@16/umd/react-dom.production.js"
+      src="https://unpkg.com/react-dom@16/umd/react-dom.development.js"
       crossorigin
     ></script>
     <script src="https://unpkg.com/babel-standalone@6/babel.min.js"></script>
